# serializer version: 1
# name: test_delete_backup[found_backups0-True-1]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_backup[found_backups1-False-0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_delete_backup[found_backups2-True-0]
  dict({
    'id': 1,
    'result': dict({
      'agent_errors': dict({
      }),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[None]
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[None].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
        dict({
          'addons': list([
            dict({
              'name': 'Test',
              'slug': 'test',
              'version': '1.0.0',
            }),
          ]),
          'agent_ids': list([
            'backup.local',
          ]),
          'backup_id': 'abc123',
          'database_included': True,
          'date': '1970-01-01T00:00:00.000Z',
          'failed_agent_ids': list([
          ]),
          'folders': list([
            'media',
            'share',
          ]),
          'homeassistant_included': True,
          'homeassistant_version': '2024.12.0',
          'name': 'Test',
          'protected': False,
          'size': 0,
          'with_automatic_settings': True,
        }),
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect1]
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect1].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect2]
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect2].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect3]
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect3].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect4]
  dict({
    'id': 1,
    'result': dict({
      'agents': list([
        dict({
          'agent_id': 'backup.local',
        }),
      ]),
    }),
    'success': True,
    'type': 'result',
  })
# ---
# name: test_load_backups[side_effect4].1
  dict({
    'id': 2,
    'result': dict({
      'agent_errors': dict({
      }),
      'backups': list([
      ]),
      'last_attempted_automatic_backup': None,
      'last_completed_automatic_backup': None,
    }),
    'success': True,
    'type': 'result',
  })
# ---
